# embedded-hal

./: Cargo.toml  README.md  lib.rs
gpio/: gpio_funcsel_presets.rs  mod.rs
pac-example/: Cargo.toml  debug.gdb  memory.x
pac-example/.cargo/: config
pac-example/src/: main.rs
rp2040-pac/: Cargo.toml
rp2040_pac/: Cargo.toml
src/: mod.rs
src/gpio/: gpio.rs  gpio_funcsel_presets.rs
