[package]
name = "pac-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
rp2040-boot2 = { version = "0.3" }

[dependencies.rp2040_pac]
version = "0.1.0"
path = "../rp2040_pac"
features = ["critical-section", "rt"]


[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]
