[package]
name = "rp2040_pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
critical-section = "1.1.1"
vcell = "0.1.3"
cortex-m-rt = "0.7.3"

[features]
critical-section = []
rt = ["cortex-m-rt/device"]

